# packr

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: benchmark.mdc  compression_engine.mdc  main.mdc
config/: compare.yaml  config.yaml
config/benchmark/: default.yaml  degradation.yaml  similarity_only.yaml  timing_only.yaml
config/compression_engine/: compression_ae.yaml  jpeg.yaml  lz4.yaml  passthrough.yaml  tar.yaml
src/: __init__.py  runner.py
src/benchmark/: ARCHITECTURE.md  README.md  __init__.py  _metrics.py  base.py  degradation_benchmark.py  reproducibility_benchmark.py  time_benchmark.py
src/compression_engine/: ARCHITECTURE.md  README.md  __init__.py  base.py  jpeg_engine.py  lz4_engine.py  onnx_engine.py  passthrough_engine.py  tar_engine.py
src/utils/: ARCHITECTURE.md  README.md  __init__.py  image.py
tests/: conftest.py
tests/benchmark/: test_degradation_benchmark.py  test_reproducibility_benchmark.py
tests/compression_engine/: test_base.py  test_jpeg_engine.py  test_lz4_engine.py  test_onnx_engine.py  test_passthrough_engine.py  test_tar_engine.py
tests/utils/: test_image.py
